--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,6 +15,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '8'
+        distribution: 'temurin'
         cache: maven
     - name: Build with Maven
       run: mvn -B install
