--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.drjekyll</groupId>
   <artifactId>friendlycaptcha</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>Friendly Captcha API Client</name>
   <description>A Friendly Captcha Verification API REST client to verify puzzle solutions</description>
@@ -45,6 +44,7 @@
     <connection>scm:git:git@github.com:dheid/friendlycaptcha.git</connection>
     <developerConnection>scm:git:git@github.com:dheid/friendlycaptcha.git</developerConnection>
     <url>https://github.com/dheid/friendlycaptcha</url>
+    <tag>friendlycaptcha-1.0.0</tag>
   </scm>
 
   <distributionManagement>
