--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.drjekyll</groupId>
   <artifactId>friendlycaptcha</artifactId>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>1.2.1</version>
 
   <name>Friendly Captcha API Client</name>
   <description>A Friendly Captcha Verification API REST client to verify puzzle solutions</description>
@@ -44,7 +44,7 @@
     <connection>scm:git:git@github.com:dheid/friendlycaptcha.git</connection>
     <developerConnection>scm:git:git@github.com:dheid/friendlycaptcha.git</developerConnection>
     <url>https://github.com/dheid/friendlycaptcha</url>
-    <tag>HEAD</tag>
+    <tag>friendlycaptcha-1.2.1</tag>
   </scm>
 
   <distributionManagement>
