--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
 name: Release with Maven
 on:
-  release:
-    types:
-      - created
+  workflow_dispatch:
 jobs:
   publish:
     runs-on: ubuntu-latest
