--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <licenses>
     <license>
       <name>Lesser General Public License (LGPL)</name>
-      <url>http://www.gnu.org/copyleft/lesser.txt</url>
+      <url>https://www.gnu.org/copyleft/lesser.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
